docs/0.14/_sources/api/gammapy.astro.darkmatter.DarkMatterAnnihilationSpectralModel.rst.txt
DarkMatterAnnihilationSpectralModel
===================================

.. currentmodule:: gammapy.astro.darkmatter

.. autoclass:: DarkMatterAnnihilationSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DarkMatterAnnihilationSpectralModel.THERMAL_RELIC_CROSS_SECTION
      ~DarkMatterAnnihilationSpectralModel.channel
      ~DarkMatterAnnihilationSpectralModel.jfactor
      ~DarkMatterAnnihilationSpectralModel.k
      ~DarkMatterAnnihilationSpectralModel.mass
      ~DarkMatterAnnihilationSpectralModel.parameters
      ~DarkMatterAnnihilationSpectralModel.primary_flux
      ~DarkMatterAnnihilationSpectralModel.scale
      ~DarkMatterAnnihilationSpectralModel.z

   .. rubric:: Methods Summary

   .. autosummary::

      ~DarkMatterAnnihilationSpectralModel.__call__
      ~DarkMatterAnnihilationSpectralModel.copy
      ~DarkMatterAnnihilationSpectralModel.create
      ~DarkMatterAnnihilationSpectralModel.energy_flux
      ~DarkMatterAnnihilationSpectralModel.energy_flux_error
      ~DarkMatterAnnihilationSpectralModel.evaluate
      ~DarkMatterAnnihilationSpectralModel.evaluate_error
      ~DarkMatterAnnihilationSpectralModel.from_dict
      ~DarkMatterAnnihilationSpectralModel.integral
      ~DarkMatterAnnihilationSpectralModel.integral_error
      ~DarkMatterAnnihilationSpectralModel.inverse
      ~DarkMatterAnnihilationSpectralModel.plot
      ~DarkMatterAnnihilationSpectralModel.plot_error
      ~DarkMatterAnnihilationSpectralModel.spectral_index
      ~DarkMatterAnnihilationSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: THERMAL_RELIC_CROSS_SECTION
   .. autoattribute:: channel
   .. autoattribute:: jfactor
   .. autoattribute:: k
   .. autoattribute:: mass
   .. autoattribute:: parameters
   .. autoattribute:: primary_flux
   .. autoattribute:: scale
   .. autoattribute:: z

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
